Feat: Header + Home banner | pending: banner carousel for today recomed films

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+/* custom style defined here with @layer and @apply - function & directives core concept*/
